# glube

./: CMakeLists.txt  README.md  glube.code-workspace
glad/: CMakeLists.txt
glad/include/glad/: gl.h
include/glube/: Attributes.hpp  AutoBuffer.hpp  BitmapText.hpp  Buffer.hpp  BuildingBuffer.hpp  Context.hpp  Pool.hpp  Program.hpp  Sampler.hpp  Shader.hpp  Texture.hpp  Window.hpp  callable.hpp  glube.hpp  keys.hpp  nameof.hpp  utilities.hpp
sample/: CMakeLists.txt  main.cpp
src/: Context.cpp  Window.cpp  glube.cpp  utilities.cpp
tests/: CMakeLists.txt  fakegl.hpp  pooltests.cpp  tests.cpp
